# agent-pulse

./: .dockerignore  .env.example  .gitignore  README.md
.claude/: launch.json
backend/: config.yaml  go.mod  go.sum
backend/cmd/server/: main.go
backend/configs/: config.example.yaml
backend/internal/api/: cluster_handler.go  cost_handler.go  e2e_test.go  eval_handler.go  harness_handler.go  middleware.go  middleware_rate_limit.go  middleware_rate_limit_test.go  pii.go  response.go  router.go  trace_handler.go  trace_handler_test.go
backend/internal/app/: app.go
backend/internal/collector/: otlp_converter.go  otlp_converter_test.go  otlp_grpc.go  otlp_handler_test.go  otlp_http.go
backend/internal/config/: auth.go  config.go  config_test.go
backend/internal/domain/: domain.go  domain_test.go
backend/internal/pii/: redact.go
backend/internal/repository/: chroma.go  clickhouse.go  clickhouse_adapter.go  container.go  doc.go  postgres.go  (+5 more)
backend/pkg/: .gitkeep
deploy/: .env.example  README.md  docker-compose.yml
deploy/docker/: backend.Dockerfile  web.Dockerfile
docs/: API.md  ARCHITECTURE.md  PLAN.md  PRD.md  README.md  REPORT.md  REVIEW.md  SDK.md  SECURITY.md
sdk-python/: README.md  pyproject.toml
sdk-python/examples/: basic_usage.py  demo_agent.py  screenshot_dashboard.py
sdk-python/src/agentpulse/: __init__.py  _version.py  client.py  decorators.py  spans.py
sdk-python/src/agentpulse/integrations/: __init__.py  autogen.py  langchain.py  langchain_callback.py  langgraph.py
sdk-python/tests/: test_basic.py  test_integrations.py
test/: README.md  conftest.py  pytest.ini  run_all.ps1  run_backend.ps1  run_deploy.ps1  run_sdk.ps1  run_web.ps1
test/functional/: test_otlp_converter_latency.py
test/integration/: test_backend_suite.py  test_k8s_manifests.py
test/module/: test_backend_proxy.py  test_sdk_integrations_pii.py
test/unit/: test_sdk_init_env.py  test_set_input_any.py
web/: .env.example  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
(+62 files in other folders)
